<resources>
    <string name="app_name">Movnow Plus</string>
    <string name="pull_to_refresh_pull_label">Drop synchronization …</string>
    <string name="pull_to_refresh_release_label">Let go to synchronize …</string>
    <string name="pull_to_refresh_refreshing_label">Syncing…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装易信，需要安装易信才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <string name="email">邮件</string>
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">Linked In</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="incentive_title">分享有奖</string>
    <string name="failed_to_start_incentive_page">无法打开“分享有奖页面”</string>
    <string name="download_faield">下载失败</string>
    <string name="app_downloading">应用正在后台下载</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="str_settings">Setting</string>
    <string name="str_walk_km">%1$s  </string>
    <string name="str_walk_mile">%1$s  </string>
    <string name="str_step_number">%1$s</string>
    <string name="str_kcla">%1$s  </string>
    <string name="str_sport_km_distance">    km</string>
    <string name="str_sport_mile_distance">    mi</string>
    <string name="str_sport_step_number">    Steps</string>
    <string name="str_sport_kcla">    K CAL</string>
    <string name="str_history_record">Historical</string>
    <string name="str_date">Day</string>
    <string name="str_mouth">Month</string>
    <string name="str_week">Week</string>
    <string name="str_manager_calories">Food Manage</string>
    <string name="str_share">Share</string>
    <string name="default_text">Default</string>
    <string name="cancel_reason">Reason for cancellation</string>
    <string name="btn_ok">Yes</string>
    <string name="btn_cancel">Cancel</string>
    <string name="str_settings_bmi_underweight">Thinnish</string>
    <string name="str_settings_bmi_underweight_text">"Underweight will increase the risk of diseases such as anemia and hematuria, so it is necessary to keep a balance diet:
 1. Do not reduce meal quantity but increase calories, such as eating bread with peanut butter， soup with egg flowers etc.; 
 2. Have more meals within the day and add in some prepared snacks. Besides three main meals, add snacks before lunch,afternoon and before going to bed. Eat appropriate amounts of highly nutritious snacks or beverages, including milk, soy milk.
 3. High nutrition snacks generally include banana pudding, peanut butter sandwiches, fresh fruit, and cheese.
 4. High nutrition drinks generally include banana milkshakes, chocolate milk, and calcium-fortified soy milk.
 5. Be sure to include moderate exercise , enough sleep and a good mood in your daily regimen.  
"</string>
    <string name="str_settings_bmi_normal">Normal</string>
    <string name="str_settings_bmi_normal_text">Your body mass index is at a moderate level, but moderate body mass index is not necessarily the same as the best state of health, so in the state of maintaining your weight you should have a balanced diet, regular exercise, and adopt a healthy lifestyle.</string>
    <string name="str_settings_bmi_overweight">The heavier</string>
    <string name="str_settings_bmi_overweight_text">According to the standard, your body mass index is higher than the moderate level which will relatively increase the risk of suffering from obesity-related diseases (such as diabetes, and cardiovascular disease) . To prevent above health issues, we recommend that you increase the amount of physical activity, change sedentary lifestyle, and avoid food with high fat, high sugar and high-calorie foods. Contact your doctor and dietitian for an exercise program and diet that suits your needs.</string>
    <string name="str_settings_bmi_obesity">Fat</string>
    <string name="str_settings_bmi_obesity_text">"Now your body mass index is obese.
 Obesity is a major risk factor for chronic diseases such as diabetes, cardiovascular disease, arthritis and certain cancers.
 You should have enough exercise and follow a balanced diet with proper calorie intake. Try to balance calorie intake and consumption.
 Seek opinions from doctors and nutritionists to discuss practical weight control goals."</string>
    <string name="str_settings_input_name">Username is required</string>
    <string name="str_settings_wear_submit">Submit</string>
    <string name="str_sport_type">Activity Type</string>
    <string name="str_auto_switch">Automatic switching</string>
    <string name="str_knock_devices">Knocking the device three times or click two times</string>
    <string name="str_sleep_auto_switch">Sleep   (auto-cut back to active mode)</string>
    <string name="str_riding_auto_switch">Running  (auto-cut back to active mode)</string>
    <string name="str_sport_default">Default</string>
    <string name="str_sport_walk">Walk</string>
    <string name="str_sport_sleep">Sleep</string>
    <string name="str_sport_bike">Cycling</string>
    <string name="str_sport_swim">Swimming</string>
    <string name="str_sport_tennis">Tennis</string>
    <string name="str_sport_basketball">Basketball</string>
    <string name="str_sport_football">Football</string>
    <string name="str_target_active">Activist</string>
    <string name="str_target_lose_weight">Intensive</string>
    <string name="str_target_common">Ordinary</string>
    <string name="str_target_step_active">"Current conditions
%1$s Step"</string>
    <string name="str_target_step_lose_weight">"Current conditions
%1$sStep"</string>
    <string name="str_target_step_common">"Current conditions
%1$sStep"</string>
    <string name="str_target_setting_tip">Set each goal you want to achieve</string>
    <string name="str_add_calorie">Add</string>
    <string name="str_sport">Activities</string>
    <string name="str_sleep">Sleep</string>
    <string name="str_setting_sleeptime">Sleep time detecting</string>
    <string name="str_setting_long_sitting_time">Sedentary period set</string>
    <string name="str_setting_save">Save</string>
    <string name="str_setting_sleeptime_begin">Start time</string>
    <string name="str_setting_sleeptime_end">End time</string>
    <string name="str_setting_sleeptime_tips">Within this time period, you do not need to operate the equipment, you can enter the sleep mode.</string>
    <string name="str_setting_long_sitting_time_tips">After opening a reminder of sedentary, your device will increase the power consumption</string>
    <string name="str_experience_immediately">Immediately experience</string>
    <string name="str_food_manager_date">Today</string>
    <string name="str_food_manager_express">Calories intake-calories consumption</string>
    <string name="str_not_filled">Do not fill in</string>
    <string name="str_start_camera_fail">Failed to start the camera</string>
    <string name="str_not_find_camera">Can’t find camera</string>
    <string name="str_start_gallry_fail">Failed to start Photo Gallery</string>
    <string name="str_input_calries">Enter day calories intake</string>
    <string name="str_input_food_name">Pls. enter food name</string>
    <string name="str_input_food_repeate">Food name duplicates!</string>
    <string name="str_input_food_calories">Pls. enter food K cal</string>
    <string name="str_max_colories_value">The Max. K CAL is 2000, pls. re-enter.</string>
    <string name="str_calories_copy_of">Calories/100g</string>
    <string name="str_get_calories">Calorie intake</string>
    <string name="str_calories_per_kg">Kcal/100g</string>
    <string name="str_dialog_food_name">Food names</string>
    <string name="str_dialog_colory">K CAL</string>
    <string name="str_dialog_tip_delete">Delete</string>
    <string name="str_current_mounth">Month</string>
    <string name="str_current_date">Day</string>
    <string name="str_today">Today</string>
    <string name="str_dialog_delete_food">Are you sure to delete this food?</string>
    <string name="str_my_account">Profile</string>
    <string name="str_my_account_edit">Edit</string>
    <string name="str_input_acc_hint">Mailbox</string>
    <string name="str_input_passwd_hint">Password</string>
    <string name="settings_take_photo">Photograph</string>
    <string name="settings_select_local_pic">Select your local photos</string>
    <string name="settings_cancel">Cancel</string>
    <string name="str_open">on</string>
    <string name="str_close">off</string>
    <string name="cs_thirty_minute_stand_up">Stand up %1$s Mins later</string>
    <string name="str_devices_need_update">Bracelet firmware needs to be upgraded to synchronize the data, determines the upgrade?</string>
    <string name="str_devices_update_title">Firmware upgrade</string>
    <string name="str_share_to">Share to</string>
    <string name="cs_start_end_long_stting_time">Sedentary period set</string>
    <string name="cs_long_sitting_time_remind_tip">In order to avoid disturbing your rest, it is recommended that you turn off sedentary reminders when you go to sleep. When sedentary reminders are on they will increase power consumption.</string>
    <string name="str_send_email_reset_pwd">We’ve given your mailbox to send a reset password email.</string>
    <string name="str_send_email_reset_pwd_tip_1">1.24-hour valid.</string>
    <string name="str_send_email_reset_pwd_tip_2">2. If you have not received, please check your Junk mailbox or filter.</string>
    <string name="Shoot_number">Number of burst shot</string>
    <string name="Shoot_interval">Interval of burst shot</string>
    <string name="ShootThreeButton">3</string>
    <string name="ShootFiveButton">5</string>
    <string name="ShootTenButton">10</string>
    <string name="ShootIntervalTwoButton">2s</string>
    <string name="ShootIntervalThreeButton">3s</string>
    <string name="ShootIntervalFourButton">4s</string>
</resources>