<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/q2_bg" android:fitsSystemWindows="true" android:clipToPadding="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.veclink.movnow_q2.view.TitleBarRelativeLayout android:id="@id/rl_title" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/text_size_h5" android:textColor="@color/q2_text_dark_blue_color" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_magrin" android:layout_marginTop="10.0dip" android:text="@string/str_auto_switch" />
    <TextView android:textSize="@dimen/text_size_h5" android:textColor="@color/q2_text_dark_blue_color" android:gravity="center_vertical" android:id="@id/tv_default" android:background="@drawable/healthy_sport_tv_bg" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_magrin" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/settings_item_magrin" android:text="@string/str_sport_default" />
    <TextView android:enabled="false" android:textSize="@dimen/text_size_h5" android:textColor="@color/gray" android:gravity="center_vertical" android:id="@id/tv_walk" android:background="@drawable/healthy_sport_tv_bg" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_magrin" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/settings_item_magrin" android:text="@string/str_sport_walk" />
    <TextView android:enabled="false" android:textSize="@dimen/text_size_h5" android:textColor="@color/gray" android:gravity="center_vertical" android:id="@id/tv_sleep" android:background="@drawable/healthy_sport_tv_bg" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_magrin" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/settings_item_magrin" android:text="@string/str_sport_sleep" />
    <TextView android:enabled="false" android:textSize="@dimen/text_size_h5" android:textColor="@color/gray" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_magrin" android:layout_marginTop="10.0dip" android:text="@string/str_knock_devices" />
    <TextView android:enabled="false" android:textSize="@dimen/text_size_h5" android:textColor="@color/gray" android:gravity="center_vertical" android:id="@id/tv_riding" android:background="@drawable/healthy_sport_tv_bg" android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/settings_item_magrin" android:layout_marginTop="10.0dip" android:layout_marginRight="@dimen/settings_item_magrin" android:text="@string/str_riding_auto_switch" />
</LinearLayout>