<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/comment_dialog_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/BasicTextSize" android:textColor="@color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/str_devices_update_title" />
    <TextView android:textSize="@dimen/text_size_h4" android:textColor="@color/dialong_content_color" android:id="@id/content" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_devices_need_update" android:layout_centerInParent="true" />
    <RelativeLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="150.0dip">
        <Button android:textSize="@dimen/BasicTextSize" android:textColor="@color/base_remind_dialog_color_selector" android:id="@id/cancel" android:background="@drawable/dialog_btn_cancle_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/btn_cancel" android:layout_toLeftOf="@id/ok" />
        <Button android:textSize="@dimen/BasicTextSize" android:textColor="@color/white" android:id="@id/ok" android:background="@drawable/dialog_btn_confirm_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/btn_ok" android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>