<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/pop_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentRight="true">
        <TextView android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_one" android:background="@drawable/pop_center_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_date" />
        <TextView android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_two" android:background="@drawable/pop_center_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/str_week" />
        <TextView android:textSize="15.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_three" android:background="@drawable/pop_buttom_bg" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_mouth" />
    </LinearLayout>
</RelativeLayout>