<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/text_size_h4" android:textColor="@color/dialog_color_selector" android:id="@id/dialog_btn_take_photo" android:background="@drawable/remind_list_item_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_take_photo" />
    <Button android:textSize="@dimen/text_size_h4" android:textColor="@color/dialog_color_selector" android:id="@id/dialog_btn_select_local_pic" android:background="@drawable/remind_list_item_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/settings_select_local_pic" />
    <Button android:textSize="@dimen/text_size_h4" android:textColor="@color/dialog_color_selector" android:id="@id/dialog_btn_portait_cancle" android:background="@drawable/remind_list_item_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="30.0dip" android:text="@string/settings_cancel" />
</LinearLayout>